// Vitest Snapshot v1

exports[`renders a private header 1`] = `
<div>
  <header
    class="css-on3ivn"
  >
    <div
      class="MuiBox-root css-1becb2a"
    >
      <div
        class="MuiBox-root css-429xfk"
      >
        <img
          class="MuiBox-root css-1emgxcc"
          src="/img/cx-logo-text.svg"
        />
      </div>
      <div
        class="MuiBox-root css-14tu3sa"
      >
        <nav
          class="MuiBox-root css-2imjyh"
        />
      </div>
      <div
        class="MuiBox-root css-19g4w2v"
      >
        <div
          class="MuiBox-root css-0"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeSmall MuiButton-containedSizeSmall css-73kr90-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            Help
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </header>
</div>
`;

exports[`renders a public header 1`] = `
<div>
  <div
    class="MuiBox-root css-1becb2a"
  >
    <div
      class="MuiBox-root css-429xfk"
    >
      <img
        class="MuiBox-root css-eerkt0"
        src="/img/IRS_FE_Logo_long.png"
      />
    </div>
    <div
      class="MuiBox-root css-14tu3sa"
    >
      <nav
        class="MuiBox-root css-2imjyh"
      >
        <div
          class="MuiBox-root css-79elbk"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-40uvlr-MuiTypography-root-MuiLink-root-MuiTypography-root-MuiLink-root"
            href="/DEMO/dashboard"
          >
            Demo Data - Home
          </a>
        </div>
      </nav>
    </div>
    <div
      class="MuiBox-root css-19g4w2v"
    >
      <div
        class="MuiBox-root css-0"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeSmall MuiButton-containedSizeSmall css-73kr90-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          Help
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <button
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium css-1kuq5xv-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="LogoutIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="m17 7-1.41 1.41L18.17 11H8v2h10.17l-2.58 2.58L17 17l5-5zM4 5h8V3H4c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h8v-2H4V5z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;
